--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -69,12 +69,15 @@
           </span>
         </div>
         <div class="form-group checkbox">
-          <fa-icon
-            class="fa-icon"
-            [ngClass]="{ checked: checkbox.value, error: checkboxErrors }"
-            [icon]="!checkbox.value ? iconCheck : iconUncheck"
+          <span
+            [ngClass]="{
+              checked: checkbox.value,
+              error: checkboxErrors,
+              'far square': !checkbox.value,
+              'fas check-square': checkbox.value
+            }"
             (click)="onChecked()"
-          ></fa-icon>
+          ></span>
           <input
             type="checkbox"
             name="accept-terms"
