--- a/src/app/shared/social/social.component.html
+++ b/src/app/shared/social/social.component.html
@@ -8,7 +8,7 @@
         "
         target="_blank"
       >
-        <fa-icon [icon]="facebook"></fa-icon>
+        <span class="fab facebook"></span>
       </a>
     </li>
     <li>
@@ -16,7 +16,7 @@
         [href]="'https://discord.gg/5Bb5yvzNPr' | domSanitizer"
         target="_blank"
       >
-        <fa-icon [icon]="discord"></fa-icon>
+        <span class="fab discord"></span>
       </a>
     </li>
     <li>
@@ -27,7 +27,7 @@
         "
         target="_blank"
       >
-        <fa-icon [icon]="youtube"></fa-icon>
+        <span class="fab youtube"></span>
       </a>
     </li>
   </ul>
