--- a/src/app/user-menu/components/user-menu/user-menu.component.html
+++ b/src/app/user-menu/components/user-menu/user-menu.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="username$ | async as username">
   <button class="button button-primary">
-    <fa-icon [icon]="bell"></fa-icon>
+    <span class="far bell"></span>
   </button>
   <article class="menu__container" *ngIf="username">
     <div class="menu__header">
