--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,28 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Font Awesome 5 Regular";
+  src: url("./assets/fonts/fa-regular-400.woff") format("woff");
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Font Awesome 5 Solid";
+  src: url("./assets/fonts/fa-solid-900.woff") format("woff");
+  font-style: bold;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Font Awesome 5 Brands";
+  src: url("./assets/fonts/fa-brands-400.woff") format("woff");
+  font-style: normal;
+  font-display: swap;
+}
+
 @import "./styles/helpers/index-helpers";
 @import "./styles/base/index-base";
 @import "./styles/vendors/all";
