--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,16 @@
-<nav>
-  <ul>
-    <li><a routerLink="/" class="link">Home </a></li>
-    <li><a routerLink="#" class="link">Comunidades </a></li>
-    <li><a routerLink="#" class="link">Talleres </a></li>
-    <li><a routerLink="#" class="link">Creadores de contenido </a></li>
+<nav class="navbar">
+  <ul class="navbar__links">
+    <li class="navbar__item">
+      <a routerLink="/" class="link navbar__link">Home </a>
+    </li>
+    <li class="navbar__item">
+      <a routerLink="#" class="link navbar__link">Comunidades </a>
+    </li>
+    <li class="navbar__item">
+      <a routerLink="#" class="link navbar__link">Talleres </a>
+    </li>
+    <li class="navbar__item">
+      <a routerLink="#" class="link navbar__link">Creadores de contenido </a>
+    </li>
   </ul>
-  <div class="user-info"></div>
 </nav>
