--- a/src/app/user-menu/components/user-menu/user-menu.component.html
+++ b/src/app/user-menu/components/user-menu/user-menu.component.html
@@ -20,7 +20,7 @@
 
     <div class="user-menu__actions" [class.active]="isShowSubmenu">
       <div class="actions__content">
-        <button class="link">Mi perfil</button>
+        <button class="link" (click)="goMyProfile()">Mi perfil</button>
         <button class="link" (click)="logout()">Cerrar sesión</button>
       </div>
     </div>
