--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -15,6 +15,8 @@
   --bg-color3: #{$color-secondary};
   --bg-color4: #{$color-p-darken};
   --bg-color5: #{$color-bg};
+  --bg-color: #{$bg-color};
+  --font-color: #{$font-color};
 }
 *,
 *:before,
