--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -1,16 +1,16 @@
 @mixin link($color: "var(--bg-color3)") {
   display: inline;
   color: #{$color};
-  text-decoration: none;
-  text-align: center;
   background: transparent;
   border: none;
   font-size: inherit;
+  text-decoration: none;
+  text-align: center;
+  opacity: 0.8;
+  transition: opacity 150ms ease-in-out;
   cursor: pointer;
-  transition: color 150ms ease-in-out;
 }
 @mixin link-hover($color: "var(--bg-color1)") {
   color: #{$color};
-  outline: none;
-  text-decoration: none;
+  opacity: 1;
 }
