--- a/src/styles/layout/_user-menu.scss
+++ b/src/styles/layout/_user-menu.scss
@@ -122,7 +122,7 @@
     height: 100%;
     padding: 5%;
     .link {
-      color: $font-color;
+      color: var(--font-color);
       margin: 5% 0;
     }
     .link:last-child {
