--- a/src/app/profile/components/layout/layout.component.html
+++ b/src/app/profile/components/layout/layout.component.html
@@ -1,5 +1,2 @@
-<div class="submenu-general">
-  <button class="link" routerLink="user">Mi Perfil</button>
-  <button class="link" routerLink="edit">Editar Perfil</button>
-</div>
+<app-submenu> </app-submenu>
 <router-outlet></router-outlet>
