--- a/src/styles/base/_buttons-links.scss
+++ b/src/styles/base/_buttons-links.scss
@@ -9,11 +9,10 @@
   white-space: nowrap;
   border: none;
   border-radius: $border-radius-10;
-  transition: transform 200ms cubic-bezier(0.35, 0, 0.25, 1),
-    opacity 200ms ease-in, background-color 200ms ease-in-out;
+  transition: transform 150ms cubic-bezier(0.35, 0, 0.25, 1),
+    opacity 150ms ease-in, background-color 150ms ease-in-out;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   touch-action: manipulation;
   cursor: pointer;
@@ -40,6 +39,15 @@
 .button:active {
   opacity: 1;
 }
+.button:active,
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  background-color: lighten($color: $color-primary, $amount: 30);
+}
+
 .link {
   @include link();
   &.bold {
