--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -1,3 +1,15 @@
+%link {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  padding: 0 6%;
+  text-align: center;
+  list-style: none;
+  font-size: 1rem;
+}
+
 @mixin link($color: "var(--bg-color3)") {
   display: inline;
   color: #{$color};
