--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -2,15 +2,7 @@
   width: 100%;
   height: 100%;
   &__links {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-    padding: 0 6%;
-    text-align: center;
-    list-style: none;
-    font-size: 1rem;
+    @extend %link;
   }
   &__item {
     width: 100%;
