--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div class="profile__wrapper">
+  <app-user-info-card></app-user-info-card>
+  <app-user-badges-card></app-user-badges-card>
+  <app-user-activities-card></app-user-activities-card>
+  <app-user-activities-card></app-user-activities-card>
+</div>
