work on preserve user info state

--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -1,6 +1,8 @@
 <div class="profile__wrapper">
   <app-user-info-card></app-user-info-card>
-  <app-user-badges-card></app-user-badges-card>
-  <app-user-activities-card></app-user-activities-card>
-  <app-user-activities-card></app-user-activities-card>
+  <div class="profile__principal">
+    <app-user-badges-card></app-user-badges-card>
+    <app-user-activities-card></app-user-activities-card>
+  </div>
+  <app-user-events-card></app-user-events-card>
 </div>
