--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -35,6 +35,7 @@ $header-icons-measure: 50px;
                     Border
 -------------------------------------------
 */
+$border-radius-50: 50px;
 $border-radius-10: 10px;
 $border-radius-3: 3px;
 $border-decoration: 1px solid $color-gray0;
