state ready; fix bug canActivate; split sponsor and slider into modules; prepare navbar for present diferent content; add title to counter component; add communities route

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,10 @@
 <header class="header">
-  <div class=" nav__container">
+  <div class="nav__container">
     <div class="image__container">
       <img src="assets/images/logo.svg" />
     </div>
     <app-navbar class="navbar__wrapper"></app-navbar>
 
-  <div class="user-menu__wrapper">
-    <ng-content></ng-content>
+    <app-user-menu class="user-menu__wrapper"></app-user-menu>
   </div>
-  </div></header>
+</header>
