--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,3 +1,4 @@
+<h2>Preparate lo bueno esta por venir</h2>
 <div class="counter__container">
   <div class="counter__days counter__block" *ngIf="days">
     <div
