--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -7,5 +7,8 @@
   &__item {
     width: 100%;
     height: 100%;
+    &.active-route {
+      background-color: lighten($color: $color-primary, $amount: 30);
+    }
   }
 }
