--- a/src/styles/layout/_index-layout.scss
+++ b/src/styles/layout/_index-layout.scss
@@ -6,6 +6,7 @@
 @import "form";
 @import "form-nav";
 @import "form-label";
+@import "home";
 @import "modal";
 @import "media";
 @import "counter";
