--- a/src/app/home/components/communities/communities.component.html
+++ b/src/app/home/components/communities/communities.component.html
@@ -1,1 +1,35 @@
-<p>communities works!</p>
+<div class="col-sm-3 communities">
+  <div class="f-title">
+    <div class="row">
+      <h1 class="col-sm-9">Comunidades</h1>
+      <a routerLink="/home/communities" class="col-sm-3" style="color: white">
+        Ver más</a
+      >
+    </div>
+  </div>
+  <div class="list_communities">
+    <ul>
+      <li *ngFor="let community of communities">
+        <div class="item-thumbnail">
+          <a title=" " href="{{ community.link }}" target="_blank">
+            <img
+              alt="{{ community.name }}"
+              class="circle"
+              src="{{ community.image }}"
+              title=""
+              border="0"
+              height="72"
+              width="72"
+            /> </a
+          ><span class="title row" style="margin: 0px 0px 0px 0px"
+            ><a class="col-sm-8" title=" " href="{{ community.link }}">{{
+              community.name
+            }}</a>
+            <div class="col-sm-4"><a href="">Unirme</a></div></span
+          >
+        </div>
+        <div style="clear: both"></div>
+      </li>
+    </ul>
+  </div>
+</div>
