--- a/src/app/profile/components/edition/edition.component.html
+++ b/src/app/profile/components/edition/edition.component.html
@@ -1,2 +1,83 @@
 <button class="button button-primary" routerLink="/profile">Regresar</button>
-<p>edition works!</p>
+<section class="content">
+  <div class="tab-pane fade in active">
+    <form [formGroup]="editForm" (ngSubmit)="onSubmit()" class="form">
+      <div class="form-group">
+        <label class="form-label">NICKNAME</label>
+        <input
+          class="form-control"
+          [class.error]="nickErrors"
+          type="text"
+          placeholder="Escriba su nickname"
+          formControlName="usuNickname"
+        />
+        <span class="input__error" *ngIf="nickErrors">
+          {{ nickErrors | validationErrors }}
+        </span>
+        <a
+          routerLink="/forgot"
+          class="link input__error"
+          *ngIf="nickErrors && nickErrors.notAvailable"
+        >
+          <strong> ¿Olvido su contraseña? ¡Click Aqui! </strong>
+        </a>
+      </div>
+      <div class="form-group">
+        <label class="form-label">CORREO ELECTRÓNICO</label>
+        <input
+          class="form-control"
+          [class.error]="emailErrors"
+          placeholder="Escriba su email"
+          type="email"
+          formControlName="usuCorreo"
+        />
+        <span class="input__error" *ngIf="emailErrors">
+          {{ emailErrors | validationErrors }}
+        </span>
+        <a
+          routerLink="/forgot"
+          class="link input__error"
+          *ngIf="emailErrors && emailErrors.notAvailable"
+        >
+          <strong> ¿Olvido su contraseña? ¡Click Aqui! </strong>
+        </a>
+      </div>
+      <div class="form-group">
+        <label class="form-label">CONTRASEÑA</label>
+        <input
+          class="form-control"
+          [class.error]="passErrors"
+          placeholder="Escriba su contraseña"
+          type="password"
+          formControlName="usuClave"
+        />
+        <span class="input__error" *ngIf="passErrors">
+          {{ passErrors | validationErrors }}
+        </span>
+      </div>
+      <div class="form-group">
+        <label class="form-label">CONFIRMAR CONTRASEÑA</label>
+        <input
+          class="form-control"
+          placeholder="Confirme su contraseña"
+          [class.error]="confirmErrors"
+          type="password"
+          formControlName="usuClave2"
+        />
+        <span class="input__error" *ngIf="confirmErrors">
+          {{ confirmErrors | validationErrors }}
+        </span>
+      </div>
+
+      <div class="form-group btn-container">
+        <button
+          class="button button-primary button-block"
+          type="submit"
+          [disabled]="isLoading"
+        >
+          Guardar Cambio
+        </button>
+      </div>
+    </form>
+  </div>
+</section>
