--- a/src/app/home/components/communities/communities.component.html
+++ b/src/app/home/components/communities/communities.component.html
@@ -2,7 +2,7 @@
   <div class="f-title">
     <div class="row">
       <h1 class="col-sm-9">Comunidades</h1>
-      <a routerLink="/home/communities" class="col-sm-3" style="color: white">
+      <a routerLink="/communities" class="col-sm-3" style="color: white">
         Ver más</a
       >
     </div>
