--- a/src/app/profile/components/submenu/submenu.component.html
+++ b/src/app/profile/components/submenu/submenu.component.html
@@ -1,10 +1,6 @@
 <div class="submenu-general">
   <ul class="submenu-general__links">
-    <li
-      class="submenu-general__item"
-      routerLinkActive="active-route"
-      [routerLinkActiveOptions]="{ exact: true }"
-    >
+    <li class="submenu-general__item">
       <a
         class="button button-secondary submenu-general__link"
         [routerLink]="['profile']"
@@ -12,11 +8,7 @@
         Mi Perfil
       </a>
     </li>
-    <li
-      class="submenu-general__item"
-      routerLinkActive="active-route"
-      [routerLinkActiveOptions]="{ exact: true }"
-    >
+    <li class="submenu-general__item">
       <a
         class="button button-secondary submenu-general__link"
         (click)="navTo('badges')"
@@ -24,11 +16,7 @@
         Insignias
       </a>
     </li>
-    <li
-      class="submenu-general__item"
-      routerLinkActive="active-route"
-      [routerLinkActiveOptions]="{ exact: true }"
-    >
+    <li class="submenu-general__item">
       <a
         class="button button-secondary submenu-general__link"
         (click)="navTo('groups')"
@@ -36,11 +24,7 @@
         Grupos
       </a>
     </li>
-    <li
-      class="submenu-general__item"
-      routerLinkActive="active-route"
-      [routerLinkActiveOptions]="{ exact: true }"
-    >
+    <li class="submenu-general__item">
       <a
         class="button button-secondary submenu-general__link"
         (click)="navTo('events')"
