--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -7,8 +7,17 @@
   &__item {
     width: 100%;
     height: 100%;
-    &.active-route {
-      background-color: lighten($color: $color-primary, $amount: 30);
+  }
+  &__link {
+    position: relative;
+    &.active-route::after {
+      content: "";
+      position: absolute;
+      bottom: -30%;
+      left: 0;
+      width: 100%;
+      height: 20%;
+      background-color: $color-primary;
     }
   }
 }
